--- a/index.html
+++ b/index.html
@@ -92,7 +92,25 @@
                             <img class="team-img" src="./images/team1.jpg" alt="Чоловік у сорочці та окулярах" width="270" height="260">
                             <div class="text-wrapper">
                                 <h3 class="team-subtitle">Ігор Дем'яненко</h3>
-                                <p class="team-position" lang="en">Product Designer</p>
+                                <p class="team-position" lang="en">Product Designer</p>                          
+                                <div class="socials">
+                                    <ul class="link list">
+                                        <li>
+                                            <a class="instagram" href="">1</a>
+                                        </li>
+                                        <li>
+                                            <a class="" href="">2</a>
+                                        </li>
+                                        <li>
+                                            <a class="" href="">3</a>
+                                        </li>
+                                        <li>
+                                            <a class="" href="">4</a>
+                                        </li>
+                                    </ul>
+
+                                </div>
+                                
                             </div>                                   
                         </li>
     
