--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         </a> 
                     </li>
                 </ul>
-            </div> -->                               
+            </div>                               
         </header>    
 
         <main> 
